<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>fr.ul.miage</groupId>
  <artifactId>baignoirefxml</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>baignoirefxml</name>
<properties>
	<!--  Le code source en UTF-8  -->
	<project.build.sourceEncoding>UTF8</project.build.sourceEncoding>
	<!--  Où stocker la distribution binaire -->
	<project.bindist.dir>${project.basedir}/bindist</project.bindist.dir>
	<!-- Nom de la classe principale -->
	<project.main.classname>${project.groupId}.${project.artifactId}.Launcher</project.main.classname>
	<!-- Nom du script à éxecuter (bindist)  -->
  	<project.bin.appname>run</project.bin.appname>
	  </properties>
	  <build>
	  <plugins>
	  		<plugin>
	  			<!--  Use java 11 -->
	  			<groupId>org.openjfx</groupId>
	  			<artifactId>javafx-maven-plugin</artifactId>
	  			<version>0.0.5</version>
	  			<configuration>
	  				<mainClass>${project.main.classname}</mainClass>
	  			</configuration>
	  		</plugin>
	  		<plugin>
  			<!-- create scripts for apps -->
  			<!--  mvn package | appassembler:assemble -->
  			<groupId>org.codehaus.mojo</groupId>
  			<artifactId>appassembler-maven-plugin</artifactId>
  			<version>1.10</version>
  			<configuration>
  				<assembleDirectory>${project.bindist.dir}</assembleDirectory>
  				<programs>
  					<program>
  						<mainClass>${project.main.classname</mainClass>
  						<id>${project.bin.appname}</id>
  					</program>
  				</programs>
  			</configuration>
  			<executions>
	  			<execution>
	  				<phase>package</phase>
	  				<goals>
	  					<goal>assemble</goal>
	  				</goals>
	  			</execution>
  			</executions>
  		</plugin>
  		<plugin>
  			<!-- create a distribution archive -->
  			<!-- mvn install | assembly:single -->
  			<groupId>org.apache.maven.plugins</groupId>
  			<artifactId>maven-assembly-plugin</artifactId>
  			<version>3.1.0</version>
  			<executions>
  				<execution>
  					<id>make-zip</id>
  					<phase>install</phase>
  					<goals>
  						<goal>single</goal>
  					</goals>
  					<configuration>
  						<descriptors>
  							<descriptor>zip.xml</descriptor>
  						</descriptors>
  						<appendAssemblyId>true</appendAssemblyId>
  					</configuration>
  				</execution>
  			</executions>
  		</plugin>
	  		<plugin>
              <!-- use java 11 -->
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-compiler-plugin</artifactId>
              <version>3.8.0</version>
              <configuration>
                  <release>11</release>
              </configuration>
         	</plugin>
	  		<plugin>
	  			<!--  Use java 11 -->
	  			<groupId>org.codehaus.mojo</groupId>
	  			<artifactId>appassembler-maven-plugin</artifactId>
	  			<version>1.10</version>
	  			<executions>
	  				<execution>
	  					<id>win</id>
	  					<phase>package</phase>
	  					<goals>
	  						<goal>assemble</goal>
	  					</goals>
	  					<configuration>
	  						<assembleDirectory>${project.bindist.dir}</assembleDirectory>
	  						<repositoryLayout>flat</repositoryLayout>
	  						<extraJvmArguments>
	  							--module-path %JAVAFX_HOME%\lib --add-modules javafx.controls,javafx.fxml
	  						</extraJvmArguments>
	  						<programs>
	  							<program>
	  								<platforms>
	  									<platform>windows</platform>
	  								</platforms>
	  								<mainClass>${project.main.classname}</mainClass>
	  								<id>${project.bin.appname}</id>
	  							</program>
	  						</programs>
	  					</configuration>
	  				</execution>
	  				<execution>
	  					<id>unix</id>
	  					<phase>package</phase>
	  					<goals>
	  						<goal>assemble</goal>
	  					</goals>
	  					<configuration>
	  						<assembleDirectory>${project.bindist.dir}</assembleDirectory>
	  						<repositoryLayout>flat</repositoryLayout>
	  						<extraJvmArguments>
	  							--module-path $JAVAFX_HOME/lib --add-modules javafx.controls,javafx.fxml
	  						</extraJvmArguments>
	  						<programs>
	  							<program>
	  								<platforms>
	  									<platform>unix</platform>
	  								</platforms>
	  								<mainClass>${project.main.classname}</mainClass>
	  								<id>${project.bin.appname}</id>
	  							</program>
	  						</programs>
	  					</configuration>
	  				</execution>
	  			</executions>
	  		</plugin>
	  	</plugins>
	</build>
	<dependencies>
		<dependency>
		      <groupId>com.opencsv</groupId>
		      <artifactId>opencsv</artifactId>
		      <version>5.3</version>
		  </dependency>
		<dependency>
	  		<groupId>org.openjfx</groupId>
	  		<artifactId>javafx-controls</artifactId>
	  		<version>17</version>
		</dependency>
		<dependency>
	  		<groupId>org.openjfx</groupId>
	  		<artifactId>javafx-fxml</artifactId>
	  		<version>13</version>
		</dependency>
		<dependency>
	  		<groupId>org.apache.commons</groupId>
	  		<artifactId>commons-csv</artifactId>
	  		<version>1.5</version>
		</dependency>
		<dependency>
	  		<groupId>commons-cli</groupId>
	  		<artifactId>commons-cli</artifactId>
	  		<version>1.4</version>
		</dependency>
	</dependencies>
	</project>